- Fixed bug #52539 (Calling function from rebound Closure causes crash)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@301990 c90b9560-bf6c-de11-be94-00142212c4b1